--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,8 +1,9 @@
 .sidebarWrapper {
-  flex: 1;
+ 
   height: 100vh;
   border-right: 1px solid var(--border-silver-color);
-  min-width: 200px;
+  min-width: 240px;
+  
 
 
   .sidebarTop {
