--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -8,6 +8,8 @@
   position: sticky;
   top: 0;
   z-index: 2;
+  width: 100%;
+  background-color: white;
 
   .topbarIcon {
     font-size: 24px;
