--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,27 +2,43 @@
   width: 100%;
   display: flex;
 
+
   .homepageRight {
-    flex: 5;
+    max-width: calc(100% - 240px);
 
-    .homeMainWrapper {
-      padding: 30px 64px;
 
-      .homeMainTop {
-        display: flex;
-        justify-content: space-between;
-      }
-      // .homeMainTop {
-      //   display: flex;
-      //   justify-content: space-between;
-      // }
 
-      .homeMainBottom {
-        // & > h3 {
-        //   color: var(--text-silver-color);
-        //   text-decoration: underline;
-        // }
-      }
+    .homeMainWrapperContainer{
+      width: 100%;
+      
+          overflow-x: auto;
+              .homeMainWrapper {
+                  padding: 30px 64px;
+                  width: 100%;
+              
+              
+                  .homeMainTop {
+                    width: 100%;
+
+                    display: flex;
+                    overflow-x: auto;
+                    gap: 20px;
+                    height: 160px;
+                  }
+              
+                  // .homeMainTop {
+                  //   display: flex;
+                  //   justify-content: space-between;
+                  // }
+              
+                  .homeMainBottom {
+                    // & > h3 {
+                    //   color: var(--text-silver-color);
+                    //   text-decoration: underline;
+                    // }
+                  }
+                }
     }
+ 
   }
 }
